task-86405-fixed filter-tag spacing issue in Arabic view

--- a/scss/frontend/pages/_listing.scss
+++ b/scss/frontend/pages/_listing.scss
@@ -1617,7 +1617,8 @@ $box__primary: "box__primary";
                 background: theme('color.primary');
                 color: theme('color.white');
                 border-radius: 3px;
-                padding: 0 theme('padding.10') 0 theme('padding.3');
+                padding: 0 theme('padding.3');
+                padding-#{theme('direction.right','value')}: theme('padding.10');
                 line-height: 30px;
                 display: block;
                 font-size: theme('font.size.small');
